--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
     "react-material-ui-form-validator": "^3.0.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
