--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
+    "react-tinder-card": "^1.4.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
