--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "devStart": "nodemon app.js",
-    "start": "node --experimental-modules app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
