--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.23.0",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
+    "react-avatar-editor": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-material-ui-form-validator": "^3.0.0",
     "react-router-dom": "^5.3.0",
