--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.38.0",
+    "aws-sdk": "^2.1017.0",
     "bcryptjs": "^2.4.3",
-    "config": "^3.3.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1"
-
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
