--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,17 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "devStart": "nodemon -r dotenv/config server.js",
-    "start": "node -r dotenv/config server.js"
+    "start": "node -r dotenv/config server.js",
+    "server": "nodemon -r dotenv/config server.js",
+    "client": "npm start --prefix ../client/",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1017.0",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^6.3.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
