--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Gauge - metadata dir
+.gauge
+
+# Gauge - log files dir
+logs
+
+# Gauge - reports dir
+reports
+
+# Gauge - JavaScript node dependencies
+node_modules
+.DS_Store
+
 /.vscode
 node_modules
 server/.env
+
