updated url paths in testing suite to env var created in gauge default prop.

--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -23,3 +23,6 @@ csv_delimiter = ,
 
 # Allows steps to be written in multiline
 allow_multiline_step = false
+
+# Allows us to set default url
+REACT_APP_SITE=http://ec2-54-177-253-69.us-west-1.compute.amazonaws.com/
